@@ -24,7 +24,9 @@ repositories {
 
 dependencies {
     implementation 'org.apache.commons:commons-collections4:4.4'
-    implementation 'org.apache.commons:commons-dbcp2:2.10.0'
+    implementation ('org.apache.commons:commons-dbcp2:2.11.0') {
+        exclude group: 'commons-logging', module: 'commons-logging'
+    }
     implementation 'commons-net:commons-net:3.10.0'
     implementation 'com.github.samtools:htsjdk:3.0.5'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
