@@ -1,3 +1,6 @@
+Nov 28, 2023
+  jbrowse2: fixed script to create dir for uth files
+
 Nov 27, 2023
   jbrowse2: added handling of squirrel HiC_Itri_2 assembly
   Gff3ColumnWriter: simplified code
